--- a/index.html
+++ b/index.html
@@ -382,22 +382,33 @@
                 >Case Study</a
               >
             </div>
-            <div class="projects__row">
+          </div>
+          <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/png/comparison-lg.png"
-                alt="Software Screenshot"
+                src="./assets/png/mediamodifier_image.png"
+                alt="Mission to Mars"
                 class="projects__row-img"
                 loading="lazy"
               />
             </div>
+            <div class="projects__row">
+              <div class="projects__row-img-cont">
+                <img
+                  src="./assets/png/mediamodifier_image.png"
+                  alt="Software Screenshot"
+                  class="projects__row-img"
+                  loading="lazy"
+                />
+              </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Project 9: Web Scraping: Missions to Mars</h3>
+              <h3 class="projects__row-content-title">Project 7: Pandas: Education Standardized Tests Analysis</h3>
               <p class="projects__row-content-desc">
-                Build a web application that scrapes various websites for data related to the Mission to Mars and displays the information in a single HTML page. 
+                Pandas can help with making strategic decisions regarding future school budgets and priorities for the school board and mayor.
+                Analyzed district-wide standardized test results for math and reading. Showcased a few trends in school performance and provide a few results.
               </p>
               <a
-                href="./project-9-html"
+                href="./project-7.html"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
                 >Case Study</a
